Fix import legacy, pref based pins.

This CL contains 2 fixes for importing legacy pref based pins.
1. Import may happen at the moment when profile is not synced yet and
in last case it does not actually contain information from previous
bulds.
2. Importing ignores apps that currently are not installed. This
leads to situation that we loose pin information for such apps
and in case apps are installed later they do not appear pinned.
Solution is to import all existings apps in prefs.

BUG=680821
TEST=Clearn app sync server data. Login on M52 and do some pinning.
     Next login on M55 and pin additional app. Next login to ToT
     and observe that pin is restored for existing apps and
     pins appear automatically once apps are installed later.

Review-Url: https://codereview.chromium.org/2646973003
Cr-Commit-Position: refs/heads/master@{#445398}

Former-commit-id: d8cc9d23b26dc31e050fdc1e2042f639d8a608fa